force-app/main/default/objects/vlocity_cmt__CachedAPIChange__c/vlocity_cmt__CachedAPIChange__c.object-meta.xml
<CustomObject>
    <description>Data model to be used for tracking the cached dependency objects.</description>
    <label>CachedAPIChange</label>
    <nameField>
        <label>CachedAPIChange Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CachedAPIChanges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>