force-app/main/default/objects/vlocity_cmt__CachedAPIChange__c/fields/vlocity_cmt__Code__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Code__c</fullName>
    <description>This will store the code of catalog or the offer that gets changed/impacted due to change of another offer.</description>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>