force-app/main/default/objects/vlocity_cmt__CachedAPIChange__c/fields/vlocity_cmt__CodeType__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__CodeType__c</fullName>
    <description>This indicates the type of Code__c. It can either be Catalog/Offer.</description>
    <label>CodeType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>catalog</fullName>
                <default>true</default>
                <label>catalog</label>
            </value>
            <value>
                <fullName>offer</fullName>
            </value>
            <value>
                <fullName>data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>