force-app/main/default/objects/vlocity_cmt__CachedAPIChange__c/fields/vlocity_cmt__JobOwner__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__JobOwner__c</fullName>
    <description>This indicates which refresh job (DC / CPQ) should process this record.</description>
    <label>Job Owner</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>DC</fullName>
            </value>
            <value>
                <fullName>CPQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>