force-app/main/default/objects/vlocity_cmt__CachedAPIChange__c/fields/vlocity_cmt__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ObjectId__c</fullName>
    <description>This will store the Id of Sobject.</description>
    <label>SObject Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>